--- a/uppointment/assets/style/style.css
+++ b/uppointment/assets/style/style.css
@@ -1234,17 +1234,22 @@ section {
     .header .navigation__list {
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         height: 100vh;
         width: 70%;
         background: #fff;
         margin-left: auto;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+        padding-top: 35%;
     }
 
     .navigation__list .list__item {
         margin-right: 0;
         margin-bottom: 20px;
+    }
+
+    .navigation__list .list__link {
+        font-size: 18px;
     }
     .header__navigation .submenu {
         padding: 0;
@@ -1257,6 +1262,7 @@ section {
         text-align: left;
         max-width: 300px;
         margin-left: 40px;
+        
     }
 
     .header__navigation  ul li .submenu a:first-child,
@@ -1269,9 +1275,13 @@ section {
         margin-bottom: 20px;
         max-width: 220px;
         width: 100%;
-        font-size: 18px;
+        font-size: 16px;
         line-height: 1.5;
-    }
+        font-family: 'Nunito Sans', sans-serif;
+        text-align: center;
+        display: block;
+        
+}
 
     .header__navigation  ul li .submenu a:first-child:active,
     .header__navigation  ul li .submenu a:nth-child(2):active,
@@ -1288,10 +1298,16 @@ section {
         background: none;
     }
 
-    .header__navigation ul li:active .submenu {
-        visibility: visible;
-        opacity: 1;
+    
+
+    .header__navigation .visible {
+        display: block;
     }
+
+    .header__navigation .notvisible {
+        display: none;
+    }
+
 
     .header__navigation ul li:active ~ .navigation__list{
         margin-top: -20px;
