--- a/uppointment/assets/style/managment.css
+++ b/uppointment/assets/style/managment.css
@@ -3,6 +3,7 @@
     color: #2C3647;
     padding: 0;
     margin: 0;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
 .wrapper {
@@ -25,9 +26,69 @@ section {
     padding-right: 20px;
 }
 
+.section-title {
+    font-family: 'Nunito Sans', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 34px;
+    color: #2C3647;
+}
+
+.section-paragraph {
+    font-family: 'Nunito Sans', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 25px;
+    color: #2C3647;
+    margin-top: 10px;
+}
+
+.section-paragraph span {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 28px;
+    color: #FFC01E;
+}
+
 .title span {
     color: #FFC01E;
     font-weight: bold;
+}
+
+.section-list {
+    margin-top: 20px;
+}
+
+.section-list-item {
+    font-family: 'Nunito Sans', sans-serif;
+    font-style: normal;
+    font-weight: 200;
+    font-size: 18px;
+    line-height: 28px;
+    color: #2C3647;
+    list-style: none;
+    position: relative;
+    padding-left: 8px;
+}
+
+.section-list-item::before {
+    content:"";
+    display: block;
+    position: absolute;
+    width: 3px;
+    height: 4px;
+    border-radius: 50%;
+    top: 12px;
+    left: 0;
+    background: #FFC01E;
+}
+
+.section-list-item span {
+    font-weight: 600;
+    color: #FFC01E;
 }
 /*styling header section*/
 
@@ -149,6 +210,8 @@ section {
 .navigation__list .list__item {
     position: relative;
 }
+
+
 
 .list__link {
     text-decoration: none;
@@ -332,9 +395,12 @@ section {
 
 /* styling signature-management */
 
+.signature-management {
+    padding-top: 115px;
+}
+
 .signature-management__content {
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -346,53 +412,323 @@ section {
     line-height: 55px;
     text-transform: uppercase;
     color: #2C3647;
+    position: relative;
+    margin-top: 68px;
+    margin-bottom: 10px;
+}
+
+
+.signature-management__title::after{
+    content: "Management";
+    position: absolute;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 100px;
+    line-height: 100px;
+    /* or 100% */
+
+    text-transform: uppercase;
+
+    color: rgba(44, 54, 71, 0.05);
+    top: -68px;
+    left: -70px;
+    
 }
 
 .signature-management__title span {
+    font-family: 'Nunito Sans', sans-serif;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 200;
     font-size: 50px;
     line-height: 55px;
     text-transform: uppercase;
     color: #FFC01E;
 }
 
-
-.footer {
-    padding: 42px 0;
+.signature-management__paragraph {
+    font-style: normal;
+    font-weight: 200;
+    font-size: 18px;
+    line-height: 28px;
+    /* or 156% */
+    color: #2C3647;
+    font-family: 'Nunito Sans', sans-serif;
+    max-width: 554px;
+    margin-bottom: 30px;
 }
 
-.footer .wrapper {
+.signature-management__description .demo{
+    background: #FFC01E;
+    border-radius: 30px;
+    padding: 10px 17px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    /* or 114% */
+    text-align: center;
+    text-transform: uppercase;
+    color: #63542E;
+    text-decoration: none;
+
+    
+}
+
+
+/* styling amplify-promote */
+
+.amplify-promote {
+    padding: 30px;
+}
+
+.amplify-promote__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.footer-description .copyright, .footer-span {
-    font-family: 'Montserrat', sans-serif;
+/* styling protect-inforce */
+
+.protect-inforce {
+    padding: 30px
+}
+
+.protect-inforce__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+/*styling signature*/
+
+.signature__paragraph {
+    font-family: 'Nunito Sans', sans-serif;
+    font-style: normal;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 18px;
-    color: #303A4B;
+    font-size: 24px;
+    line-height: 33px;
+    text-align: center;
+    color: #000000;
+}
+.signature__title {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 50px;
+    line-height: 68px;
+    text-align: center;
+    color: #000000;
+    margin-top: 15px;
 }
 
-.footer-description .copyright {
-    margin-bottom: 14px;
+
+/* styling secure */
+
+.secure {
+    padding: 20px;
 }
 
-.footer-span {
-    margin-right: 40px;
+.secure__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.footer__navigation .navigation__list .footer-list__link {
+.software__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.trial {
+    padding: 50px 0;
+    text-align: center;
+}
+
+.trial__title {
+    font-family: 'Nunito Sans', sans-serif;
+    text-align: center;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 38px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #2C3647;
+    margin-bottom: 5px;
+}
+
+.trial__paragraph {
+    font-family: 'Nunito Sans', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 38px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #2C3647;
+    margin-bottom: 54px;
+}
+
+.learn-more {
+    font-family: 'Nunito Sans', sans-serif;
+    background: #FFC01E;
+    border-radius: 30px;
+    padding: 14px 31px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #63542E;
+    cursor: pointer;
+    
+}
+
+.footer {
+    background: #F4F5F6 ;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+.footer::before {
+    content: "";
+    width: 138px;
+    height: 138px;
+    position: absolute;
+    background: url(../img/footer-ellipse.svg);
+    top:-51px;
+    left: 90px;
+}
+
+.footer .footer-span:first-child {
+    margin-right: 20px;
+}
+
+.footer__navigation {
+    margin-bottom: 50px;
+}
+
+.navigation__list {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+}
+
+.footer-list__link {
+    font-family: 'Nunito Sans', sans-serif;
     text-decoration: none;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: normal;
-    font-size: 14px;
+    font-weight: 300;
+    font-size: 18px;
     line-height: 18px;
-    color: #303A4B;
+    
 }
 
-.footer__navigation .navigation__list .footer-list__item {
-    margin-left: 45px;
+.navigation__list .footer-list__item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.footer-description {
+    margin: 0 auto;
+    max-width: 289px;
+    text-align: center;
+}
+
+.footer-span, .copyright {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 200;
+    font-size: 14px;
+    line-height: 14px;
+    
+    text-align: center;
+}
+
+.copyright {
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+
+.swiper-container {
+    height: 300px;
+}
+
+.swiper-slide {
+    text-align: center;
+      font-size: 18px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+      flex-direction: column;
+}
+
+.slide-img {
+    position: relative;
+    max-width: 306px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex; 
+    flex-direction: column-reverse;
+}
+
+.slide-img img {
+    width: 100%;
+}
+
+.preview:hover ~ .img-color {
+    display: block;
+}
+.preview svg {
+    margin-right: 5px;
+}
+.preview svg path {
+    fill: #ABC6EB;
+    transition: .3s;
+}
+
+.preview:hover svg path {
+    fill: #FFC01E;
+}
+
+.slide-description {
+    margin-top: 16px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 19px;
+    text-align: center;
+    color: #000000;
+}
+
+.preview {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 19px;
+    text-align: center;
+    color: #000000;
+    text-decoration: none;
+}
+
+
+.img-color {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
 }
