--- a/uppointment/assets/style/managment.css
+++ b/uppointment/assets/style/managment.css
@@ -30,7 +30,7 @@ section {
     font-family: 'Nunito Sans', sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 22px;
     line-height: 34px;
     color: #2C3647;
 }
@@ -39,7 +39,7 @@ section {
     font-family: 'Nunito Sans', sans-serif;
     font-style: normal;
     font-weight: 300;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 25px;
     color: #2C3647;
     margin-top: 10px;
@@ -408,8 +408,8 @@ section {
     font-family: 'Nunito Sans', sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: 50px;
-    line-height: 55px;
+    font-size: 30px;
+    line-height: 34px;
     text-transform: uppercase;
     color: #2C3647;
     position: relative;
@@ -423,15 +423,12 @@ section {
     position: absolute;
     font-style: normal;
     font-weight: bold;
-    font-size: 100px;
+    font-size: 60px;
     line-height: 100px;
-    /* or 100% */
-
     text-transform: uppercase;
-
     color: rgba(44, 54, 71, 0.05);
-    top: -68px;
-    left: -70px;
+    top: -48px;
+    left: -50px;
     
 }
 
@@ -439,8 +436,8 @@ section {
     font-family: 'Nunito Sans', sans-serif;
     font-style: normal;
     font-weight: 200;
-    font-size: 50px;
-    line-height: 55px;
+    font-size: 30px;
+    line-height: 34px;
     text-transform: uppercase;
     color: #FFC01E;
 }
@@ -455,6 +452,18 @@ section {
     font-family: 'Nunito Sans', sans-serif;
     max-width: 554px;
     margin-bottom: 30px;
+}
+
+.signature-management__img {
+    max-width: 400px;
+}
+
+.signature-management__img img {
+    width: 100%;
+}
+
+.signature-management__content {
+    align-items: center;
 }
 
 .signature-management__description .demo{
@@ -591,6 +600,11 @@ section {
 
 .secure__img {
     position: relative;
+    min-width: 400px;
+}
+
+.secure__img img:nth-child(2) {
+    width: 100%;
 }
 
 .secure__img .form {
@@ -598,6 +612,8 @@ section {
     top: 27%;
     left: 24%;
     min-width: 305px;
+    animation: fadeInDown; /* referring directly to the animation's @keyframe declaration */
+    animation-duration: 2s;
 } 
 
 .software__content {
@@ -623,6 +639,8 @@ section {
     position: absolute;
     top: 21%;
     left: 37%;
+    animation: zoomInUp; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2s;
 }
 
 .trial {
@@ -635,7 +653,7 @@ section {
     text-align: center;
     font-style: normal;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 26px;
     line-height: 38px;
     text-align: center;
     text-transform: uppercase;
@@ -1111,6 +1129,14 @@ section {
     .header__button-sing-in {
         display: none;
     }
+
+    .preview {
+        display: none;
+    }
+
+    .img-color {
+        opacity: 1;
+    }
     
     .section-title {
         text-align: center;
@@ -1173,12 +1199,20 @@ section {
         flex-direction: column-reverse;
     }
 
+    .protect-inforce__img .plane {
+        max-width: 40px;
+    }
+
     .secure__content {
         flex-direction: column;
     }
 
     .software__content {
         flex-direction: column;
+    }
+
+    .software__img .plane {
+        max-width: 40px;
     }
 
     .footer .navigation__list {
